# pycodelift

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
.omc/state/: agent-replay-c061ab3c-460e-4a8c-8f4e-0a7b1ac8483f.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/c061ab3c-460e-4a8c-8f4e-0a7b1ac8483f/: hud-state.json
docs/: how-it-works.md
examples/: README.md
examples/01_minimal/: README.md  run.py
examples/01_minimal/mypkg/base/: modeling_base.py
examples/01_minimal/mypkg/child/: modular_child.py
examples/02_split_outputs/: README.md  run.py
examples/02_split_outputs/mypkg/base/: configuration_base.py
examples/02_split_outputs/mypkg/child/: modular_child.py
examples/03_transformers_compat/: README.md  run.py
examples/03_transformers_compat/src/mypkg/base/: modeling_base.py
examples/03_transformers_compat/src/mypkg/child/: modular_child.py
src/pycodelift/: __init__.py  cli.py
src/pycodelift/_vendor/: __init__.py  create_dependency_mapping.py  modular_integrations.py  modular_model_converter.py
src/pycodelift/adapters/: __init__.py  transformers.py
src/pycodelift/core/: __init__.py  flattener.py
src/pycodelift/policies/: __init__.py  file_types.py  header.py  hooks.py  naming.py
tests/: conftest.py
tests/integration/: test_cli.py  test_file_type_split.py  test_policy_injection.py  test_smoke.py  test_transformers_adapter.py
tests/unit/: test_file_types.py  test_flattener.py  test_header.py  test_hooks.py  test_naming.py
