[project]
name = "pycodelift"
dynamic = ["version"]
description = "Build-time class-inheritance flattener — generalize HuggingFace transformers' modular code-gen to any Python project."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Suhwan Choi", email = "milkclouds00@gmail.com" }
]
keywords = [
    "codegen",
    "code-generation",
    "libcst",
    "inheritance",
    "transformers",
    "modular",
    "flatten",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "libcst>=1.1.0",
]

[project.optional-dependencies]
ruff = ["ruff>=0.3.0"]

[project.scripts]
pycodelift = "pycodelift.cli:main"

[project.urls]
Homepage = "https://github.com/MilkClouds/pycodelift"
Repository = "https://github.com/MilkClouds/pycodelift"
Issues = "https://github.com/MilkClouds/pycodelift/issues"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pycodelift/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pycodelift"]

[tool.ruff]
line-length = 119
target-version = "py39"
extend-exclude = ["src/pycodelift/_version.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["pycodelift"]
omit = ["src/pycodelift/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
